# llvm-practice

elf-parser/: CMakeLists.txt
elf-parser/src/: main.cpp  parser.cpp
